# college-c

./: CMakeLists.txt
crash-course/01-vars/: vars.c
crash-course/02-input/: input.c
crash-course/03-condition/: condition.c
crash-course/04-loop/: loop.c
crash-course/05-switch/: switch.c
crash-course/06-goto/: goto.c
crash-course/07-recursive/: recursive.c
exercise/semester-1/week-2/prime-number/: index.c
exercise/semester-1/week-2/trapezoid/: index.c
exercise/semester-1/week-2/triangle/: index.c
exercise/semester-1/week-3/1/: 1.c
exercise/semester-1/week-3/2/: 2.c
exercise/semester-1/week-3/3/: 3.c
exercise/semester-1/week-3/4/: 4.c
exercise/semester-1/week-3/5/: 5.c
exercise/semester-1/week-4/1/: 1.c
exercise/semester-1/week-4/2/: 2.c
exercise/semester-1/week-4/3/: 3.c
exercise/semester-1/week-4/4/: 4.c
exercise/semester-1/week-4/5/: 1.c
exercise/semester-1/week-5/1/: 1.c
exercise/semester-1/week-5/2/: 2.c
exercise/semester-1/week-5/3/: 3.c
exercise/semester-1/week-5/4/: 4.c
exercise/semester-1/week-5/5/: 5.c
quiz/semester-1/week-15/main/: main.c
quiz/semester-1/week-15/test/: main.c
quiz/semester-1/week-7/nomor-2/: main.c
quiz/week-7/nomor-1/: main.c
quiz/week-7/nomor-3/: main.c
test/semester-1/week-16-uas/nomor-1/a/: main  main.c
test/semester-1/week-16-uas/nomor-1/b/: main  main.c
test/semester-1/week-16-uas/nomor-2/: main  main.c
test/semester-1/week-8-uts/nomor-1/: main  main.c
test/semester-1/week-8-uts/nomor-2/: main.c
test/semester-1/week-8-uts/nomor-3/: main  main.c
(+6 files in other folders)
